--- a/src/html/components/image-blocks-animated.html
+++ b/src/html/components/image-blocks-animated.html
@@ -1,11 +1,11 @@
 <div class="image-blocks-animated">
     <div class="image-blocks-animated__wrap">
-        <img class="image-blocks-animated__item" src="img/cub-left.png" alt="roll">
+        <img class="image-blocks-animated__item" src="img/cube.png" alt="cube">
     </div>
     <div class="image-blocks-animated__wrap">
-        <img class="image-blocks-animated__item item_middle" src="img/cub-center.png" alt="roll">
+        <img class="image-blocks-animated__item item_middle" src="img/cube.png" alt="cube">
     </div>
     <div class="image-blocks-animated__wrap">
-        <img class="image-blocks-animated__item" src="img/cub-right.png" alt="roll">
+        <img class="image-blocks-animated__item" src="img/cube.png" alt="cube">
     </div>
 </div>
