--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -53,7 +53,7 @@
   position: absolute;
   width: 482px;
   height: 482px;
-  background: linear-gradient(180deg, #54E17F 0%, #18756F 100%);
+  background: linear-gradient(180deg, #009fe3 0%, #009fe3 100%);
   filter: blur(200px);
   @include adaptiv-value("width", 482, 200, 0);
   @include adaptiv-value("height", 482, 200, 0);
