--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
-$green-default: #54E17F;
-$green-hover: #197A71;
+$green-default: #009FE3;
+$green-hover: #048dc7;
 $light-grey: #C7C7C7;
 $black-classic: #1D1D20;
 $black-bg: #2B2B2B;
