--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,6 +7,10 @@
   display: flex;
   min-height: 124px;
   //align-items: center;
+  @media (min-width: 1600px) {
+    max-width: 100%;
+    padding: 0 65px;
+  }
 
   &__wrap {
     display: flex;
@@ -28,6 +32,14 @@
 
   &__logo {
     z-index: 50;
+    @media (max-width: 524px) {
+      width: 50%;
+      height: auto;
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
   }
 
   &__menu {
