--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -20,7 +20,9 @@
     &__item {
       width: calc((100% - 30px) / 2);
       margin-bottom: 10px;
-      @media (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      @media (max-width: 767px) {
         width: calc((100% - 30px) / 1);
       }
     }
@@ -30,12 +32,19 @@
       border: 2px solid #383838;
       border-radius: 10px;
       padding: 20px;
+      flex: 1 1 auto;
     }
 
     &__image-hover-zoom {
       overflow: hidden;
       max-width: 565px;
-      max-height: 330px;
+      height: 100%;
+      object-fit: cover;
+
+      @media (min-width: 1600px) {
+        max-width: 100%;
+        //height: 450px;
+      }
 
       img {
         transform: scale(1);
@@ -43,6 +52,9 @@
         transition: all 0.5s;
         width: 100%;
         height: 100%;
+        @media (min-width: 768px) {
+          //min-height: 180px;
+        }
       }
     }
 
@@ -53,6 +65,7 @@
     &__content-wrap {
       margin-top: 18px;
       display: flex;
+      //flex: 1 1 auto;
       //align-items: center;
       justify-content: space-between;
     }
