--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -30,6 +30,9 @@
     @media (min-width: 768px) and (max-width: 1279px) {
       width: calc((100% - 15px) / 2);
     }
+    @media (min-width: 1280px){
+      width: calc((100% - 115px) / 3);
+    }
     @include tablet {
       &:not(:last-of-type) {
         margin-bottom: 10px;
