--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,12 +84,14 @@ body {
 }
 
 [class*="__container"] {
-  max-width: 1370px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 30px;
   padding: 0 15px;
+  @media (max-width: 1440px) {
+    max-width: 1370px;
+  }
 }
 
 .heading {
