--- a/src/scss/utils/popup.scss
+++ b/src/scss/utils/popup.scss
@@ -69,10 +69,12 @@
   &__content_image {
     padding: 0;
     max-width: 100%;
+    width: 100%;
   }
 
   &__image img {
     max-width: 100%;
+    width: 100%;
     vertical-align: top;
     border-radius: 20px;
   }
